--- a/config/openstack-config.yaml
+++ b/config/openstack-config.yaml
@@ -5,5 +5,5 @@ openstack_config:
   #image_name:         CentOS 7
   #flavor_name:        A1.8
   #controller_flavor:  A1.8
-  network_wan:        inap-18000-WAN1110
-  network_lan:        inap-18000-LAN2011
+  #network_wan:        inap-18000-WAN1110
+  #network_lan:        inap-18000-LAN2011
