--- a/roles/inventory-instance/tasks/main.yaml
+++ b/roles/inventory-instance/tasks/main.yaml
@@ -124,7 +124,8 @@
     os_key_name:                  "{{ os_key_name }}"
     os_instance_tags:             "{{ os_instance_tags }}"
     ansible_ssh_host:             "{{ ( item.server.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
-    openstack.accessIPv4:         "{{ ( item.server.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
+    openstack:
+      accessIPv4:                 "{{ ( item.server.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
     public_v4:                    "{{ ( item.server.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
     private_v4:                   "{{ ( item.server.networks[ os_cloud_privatenetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
     publicIPv4:                   "{{ ( item.server.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
@@ -152,7 +153,7 @@
        - "{{ global_dns_server_2 }}"
 
 - name: ensure private instance are up
-  no_log:                         true
+  #no_log:                         true
   os_server:
     cloud:                        "{{ os_cloud_name }}"
     state:                        present
@@ -179,7 +180,8 @@
     os_key_name:                  "{{ os_key_name }}"
     os_instance_tags:             "{{ os_instance_tags }}"
     ansible_ssh_host:             "{{ ( item.server.networks[ os_cloud_privatenetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
-    openstack.accessIPv4:         "{{ ( item.server.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
+    openstack:
+      accessIPv4:                 "{{ ( item.server.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
     public_v4:                    "{{ ( item.server.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
     private_v4:                   "{{ ( item.server.networks[ os_cloud_privatenetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
     publicIPv4:                   "{{ ( item.server.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
