--- a/roles/keepalived/defaults/main.yaml
+++ b/roles/keepalived/defaults/main.yaml
@@ -1,6 +1,9 @@
 #node counting and balancing
-node_number:                    "{{ node_count                          | default( 2 ) }}"
-public_node_number:             "{{ ( public_node_count is defined )    | ternary( public_node_count,   node_number ) }}"
-private_node_number:            "{{ ( private_node_count is defined )   | ternary( private_node_count,  ( node_number | int ) - ( public_node_number | int ) ) }}"
+node_number:                  "{{ node_count                          | default( 2 ) }}"
+public_node_number:           "{{ ( public_node_count is defined )    | ternary( public_node_count,   node_number ) }}"
+private_node_number:          "{{ ( private_node_count is defined )   | ternary( private_node_count,  ( node_number | int ) - ( public_node_number | int ) ) }}"
 
-keepalived_version:             1.3.5
+keepalived_version:           1.3.5
+
+virtualrouter_id_idx:         0
+virtualrouter_id:             "{{ groups[ 'public_nodes' ][ virtualrouter_id_idx ] }}"
