ADD: TLS self-signed or command-line passed certificate for securing the registry

--- a/roles/certs-authority/defaults/main.yaml
+++ b/roles/certs-authority/defaults/main.yaml
@@ -5,3 +5,4 @@ private_node_number:            "{{ ( private_node_count is defined )   | ternar
 
 #other default
 certs_directory:                "/opt/certs/"
+key_size:                       4096
