--- a/roles/docker-registry/tasks/main.yaml
+++ b/roles/docker-registry/tasks/main.yaml
@@ -36,6 +36,11 @@
   set_fact:
     os_auth_region_name:                "{{ openstack.clouds[ 0 ].region_name }}"
 
+- name: generate Docker Registry certificate from CA
+  include_role:
+    name:                               certs-authority
+    tasks_from:                         generate-server
+
 - name: ensure Docker Registry is up
   when:                                 inventory_hostname == os_docker_registry
   docker_container:
@@ -50,8 +55,9 @@
       - "{{ registry_public_port }}:{{ registry_private_port }}"
     env:
       REGISTRY_STORAGE:                 swift
-      REGISTRY_HTTP_TLS_CERTIFICATE:    "certs/{{ playbook_name }}-{{ inventory_hostname }}.crt"
-      REGISTRY_HTTP_TLS_KEY:            "certs/{{ playbook_name }}-{{ inventory_hostname }}.key"
+      REGISTRY_HTTP_TLS_CERTIFICATE:    "certs/{{ playbook_name }}-{{ inventory_hostname }}-server.publickey.crt"
+      REGISTRY_HTTP_TLS_KEY:            "certs/{{ playbook_name }}-{{ inventory_hostname }}-server.privatekey.key"
+      REGISTRY_HTTP_TLS_CLIENTCAS_0:    "certs/{{ playbook_name }}-CA.publickey.crt"
       REGISTRY_STORAGE_SWIFT_USERNAME:  "{{ os_auth_params.username }}"
       REGISTRY_STORAGE_SWIFT_PASSWORD:  "{{ os_auth_params.password }}"
       REGISTRY_STORAGE_SWIFT_AUTHURL:   "{{ os_auth_params.auth_url }}"
@@ -66,11 +72,10 @@
   delegate_to:                          "{{ os_docker_registry }}"
   fetch:
     flat:                               yes
-    src:                                "{{ certs_directory }}{{ playbook_name }}-{{ os_docker_registry }}.crt"
+    src:                                "{{ certs_directory }}{{ playbook_name }}-{{ os_docker_registry }}-server.publickey.crt"
     dest:                               config/data/
 
 - name: ensure Docker Registry config directory exists
-  when:                                 inventory_hostname != os_docker_registry
   file:
     mode:                               0755
     state:                              directory
@@ -80,5 +85,5 @@
   when:                                 inventory_hostname != os_docker_registry
   copy:
     directory_mode:                     0755
-    src:                                "config/data/{{ playbook_name }}-{{ os_docker_registry }}.crt"
+    src:                                "config/data/{{ playbook_name }}-{{ os_docker_registry }}-server.publickey.crt"
     dest:                               "/etc/docker/certs.d/{{ os_docker_registry_fullname }}/ca.crt"
