--- a/roles/docker-swarm/tasks/main.yaml
+++ b/roles/docker-swarm/tasks/main.yaml
@@ -35,32 +35,70 @@
   become:             yes
   when:               inventory_hostname == os_swarm_lead and swarm_status.stdout != 'active'
 
-- name: determine Docker Swarm Lead is active and leading
+- name: determine Docker Swarm Leader is active and ...leading
   command:            docker info --format={% raw %}"{{.Swarm.ControlAvailable}}"{% endraw %}
   register:           swarm_lead_status
   when:               inventory_hostname == os_swarm_lead
 
-- name: add Docker Swarm Lead(s) to os_swarm_lead group
+- name: add Docker Swarm Leader to os_swarm_lead group
   add_host:
     hostname:         "{{ inventory_hostname }}"
-    groups:           os_swarm_lead
+    groups:           os_swarm_manager
   when:               inventory_hostname == os_swarm_lead and swarm_lead_status.stdout is defined and swarm_lead_status.stdout == 'true'
 
-- name: pull Docker Swarm token from leader
-  command:            docker swarm join-token worker -q
-  register:           leader_swarm_token
-  until:              leader_swarm_token|success
+- name: pull Docker Swarm manager join token from leader
+  command:            docker swarm join-token manager -q
+  register:           leader_swarm_manager_jointoken
+  until:              leader_swarm_manager_jointoken|success
   retries:            3
   delay:              30
   ignore_errors:      yes
   become:             yes
   when:               inventory_hostname == os_swarm_lead and swarm_lead_status.stdout is defined and swarm_lead_status.stdout == 'true'
 
-- name: sharing Docker Swarm token play-wide
+- name: sharing Docker Swarm manager join token play-wide
   set_fact:
-    os_swarm_token:   "{{ hostvars[ os_swarm_lead ].leader_swarm_token.stdout }}"
+    os_swarm_manager_token: "{{ hostvars[ os_swarm_lead ].leader_swarm_manager_jointoken.stdout }}"
 
-- name: checking swarm nodes status
+- name: checking swarm manager nodes status (all the public nodes)
+  command:            docker info --format={% raw %}"{{range .Swarm.RemoteManagers}}{{.Addr}}{{end}}"{% endraw %}
+  register:           node_docker_swarm_managers
+  until:              node_docker_swarm_managers|success
+  retries:            3
+  delay:              10
+  ignore_errors:      yes
+  become:             yes
+  when:               inventory_hostname != os_swarm_lead and inventory_hostname in groups[ 'public_nodes' ]
+
+- name: info on swarm Managers
+  debug:
+    msg:              "{{ hostvars[ inventory_hostname ].privateIPv4 + ':2377' }}"
+
+- name: register swarm manager nodes (all public nodes)
+  command:            docker swarm join --token "{{ os_swarm_manager_token }}" "{{ os_swarm_lead_ip }}":2377
+  register:           docker_swarm
+  until:              docker_swarm|success
+  retries:            3
+  delay:              20
+  ignore_errors:      yes
+  become:             yes
+  when:               inventory_hostname != os_swarm_lead and inventory_hostname in groups[ 'public_nodes' ] and ( hostvars[ inventory_hostname ].privateIPv4 not in node_docker_swarm_managers.stdout )
+
+- name: pull Docker Swarm worker join token from leader
+  command:            docker swarm join-token worker -q
+  register:           leader_swarm_worker_jointoken
+  until:              leader_swarm_worker_jointoken|success
+  retries:            3
+  delay:              30
+  ignore_errors:      yes
+  become:             yes
+  when:               inventory_hostname == os_swarm_lead and swarm_lead_status.stdout is defined and swarm_lead_status.stdout == 'true'
+
+- name: sharing Docker Swarm worker join token play-wide
+  set_fact:
+    os_swarm_worker_token: "{{ hostvars[ os_swarm_lead ].leader_swarm_worker_jointoken.stdout }}"
+
+- name: checking swarm worker nodes status (all private nodes)
   command:            docker info --format={% raw %}"{{json .Swarm.RemoteManagers}}"{% endraw %}
   register:           node_docker_swarm
   until:              node_docker_swarm|success
@@ -68,14 +106,14 @@
   delay:              10
   ignore_errors:      yes
   become:             yes
-  when:               inventory_hostname != os_swarm_lead
+  when:               ( groups[ 'private_nodes' ] is defined ) and inventory_hostname in groups[ 'private_nodes' ]
 
-- name: register swarm nodes
-  command:            docker swarm join --token "{{ os_swarm_token }}" "{{ os_swarm_lead_ip }}":2377
+- name: register swarm worker nodes
+  command:            docker swarm join --token "{{ os_swarm_worker_token }}" "{{ os_swarm_lead_ip }}":2377
   register:           docker_swarm
   until:              docker_swarm|success
   retries:            3
   delay:              20
   ignore_errors:      yes
   become:             yes
-  when:               inventory_hostname != os_swarm_lead and os_swarm_token is defined and node_docker_swarm is defined and node_docker_swarm.stdout == "null"
+  when:               ( groups[ 'private_nodes' ] is defined ) and inventory_hostname in groups[ 'private_nodes' ]
