--- a/roles/mysql/defaults/main.yaml
+++ b/roles/mysql/defaults/main.yaml
@@ -1,4 +1,4 @@
 #node counting and balancing
 node_number:                    "{{ node_count                          | default( 1 ) }}"
-public_node_number:             "{{ ( public_node_count is defined )    | ternary( public_node_count,   node_count ) }}"
+public_node_number:             "{{ ( public_node_count is defined )    | ternary( public_node_count,   ( private_node_count is defined ) | ternary( ( node_number | int ) - ( private_node_count | int ), node_number ) ) }}"
 private_node_number:            "{{ ( private_node_count is defined )   | ternary( private_node_count,  ( node_number | int ) - ( public_node_number | int ) ) }}"
