ADD: scale down/up management

--- a/roles/inventory-cleanup/tasks/main.yaml
+++ b/roles/inventory-cleanup/tasks/main.yaml
@@ -1,16 +1,16 @@
 ---
 # Playbook to cleanup OpenStack instance and resource (if specififed)
 - name: confirm
-  pause: prompt="\n\n\n!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!WARNING!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n\n\n\nThis action is destructive, it will remove ALL current '{{ playbook_name }}' tagged instances !\n--Press return if you're absolutely sure. Otherwise, press Ctrl+c and then 'a' to abort--"
+  pause: prompt="\n\n\n!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!WARNING!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n\n\n\nThis action is destructive, it will remove ALL current '{{ master_role }}' tagged instances !\n--Press return if you're absolutely sure. Otherwise, press Ctrl+c and then 'a' to abort--"
   when: not 'local' in action and 'delete' in action
 
 - name: delete OpenStack instances
-  when: not 'local' in action and 'delete' in action and groups[ playbook_name ] is defined
+  when: not 'local' in action and 'delete' in action and groups[ master_role ] is defined
   os_server:
     cloud:                  "{{ os_cloud_name }}"
     state:                  absent
     name:                   "{{ item }}"
-  with_items:               "{{ groups[ playbook_name ] }}"
+  with_items:               "{{ groups[ master_role ] }}"
 
 - name: refresh inventory after delete
   meta: refresh_inventory
@@ -18,13 +18,13 @@
 - name: checking if bastion config exists
   when: not 'local' in action and 'delete' in action
   stat:
-    path:                   "./config/data/{{ playbook_name }}-ssh_config"
+    path:                   "./config/data/{{ master_role }}-ssh_config"
   register:                 bastionconfig_exist
 
 - name: delete bastion config
   when: not 'local' in action and 'delete' in action and bastionconfig_exist.stat.exists == True
   file:
-      path:                 "./config/data/{{ playbook_name }}-ssh_config"
+      path:                 "./config/data/{{ master_role }}-ssh_config"
       state:                absent
 
 - name: delete all port created in OpenStack for keepalived
@@ -32,7 +32,7 @@
   os_port:
     cloud:                  "{{ os_cloud_name }}"
     state:                  absent
-    name:                   "{{ playbook_name }}-keepalived-port"
+    name:                   "{{ master_role }}-keepalived-port"
 
 - name: delete existing SSH keys in OpenStack
   when: '"delete_all" in action'
@@ -45,7 +45,7 @@
   os_security_group:
     cloud:                  "{{ os_cloud_name }}"
     state:                  absent
-    name:                   "{{ playbook_name }}-public-secgroup"
+    name:                   "{{ master_role }}-public-secgroup"
 
 - name: checking if SSH key exists
   when: not 'local' in action
