--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -2,9 +2,9 @@ action:                         "maintain"
 
 #OpenStack ssg key name defaulting
 os_cloud_name:                  "{{ os_cloud            | default( ( openstack_config is defined and openstack_config.os_cloud is defined ) | ternary( openstack_config.os_cloud,      '' ) ) }}"
-os_instancename_prefix:         "{{ instancename_prefix | default( playbook_name + '-playbook' ) }}"
-os_key_name:                    "{{ key_filename        | default( playbook_name + '-key' ) }}"
-os_instance_tags:               "{{ server_tags         | default( playbook_name ) }}"
+os_instancename_prefix:         "{{ instancename_prefix | default( master_role + '-' ) }}"
+os_key_name:                    "{{ key_filename        | default( master_role + '-key' ) }}"
+os_instance_tags:               "{{ server_tags         | default( master_role ) }}"
 
 #keypair defaulting
 computed_ssh_key_path:          "{{ ( '~' | expanduser ) + '/.ssh/' }}"
